--- a/public/installation/habox-over-greatwall/index.print.html
+++ b/public/installation/habox-over-greatwall/index.print.html
@@ -15,7 +15,7 @@
     <meta name="twitter:description" content="前提，你已拥有可以用的梯子（节点），如果没有请参考：
 搭建免费科学上网节点
 加载项商店搜索&#34;加速&#34;，安装它（实际上就是v2raya,很好用的工具）">
-    <meta property="og:url" content="http://localhost:1313/network/habox-over-greatwall/index.html">
+    <meta property="og:url" content="http://localhost:1313/installation/habox-over-greatwall/index.html">
     <meta property="og:site_name" content="HaBox 技术支持站">
     <meta property="og:title" content="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <meta property="og:description" content="前提，你已拥有可以用的梯子（节点），如果没有请参考：
@@ -32,21 +32,21 @@
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <meta itemprop="keywords" content="科学上网,Cloudflare Worker">
     <title>Ha盒子配置科学上网 :: HaBox 技术支持站</title>
-    <link href="http://localhost:1313/network/habox-over-greatwall/index.html" rel="canonical" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
-    <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
+    <link href="http://localhost:1313/installation/habox-over-greatwall/index.html" rel="canonical" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
+    <link href="../../installation/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1734743288" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734743288" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1734743288" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1734743288" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734743288" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1734743288" rel="stylesheet">
-    <link href="../../css/fonts.css?1734743288" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734743288" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1734743288" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1734743288" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1734743288" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1734743288" rel="stylesheet">
-    <link href="../../css/print.css?1734743288" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1734743288" rel="stylesheet">
-    <script src="../../js/variant.js?1734743288"></script>
+    <link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="../../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1734749095" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1734749095" rel="stylesheet">
+    <link href="../../css/print.css?1734749095" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1734749095" rel="stylesheet">
+    <script src="../../js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -69,7 +69,7 @@
 <script>LA.init({id:"3Jh9XF56OMu5x31r",ck:"3Jh9XF56OMu5x31r"})</script>
 
   </head>
-  <body class="mobile-support print disableInlineCopyToClipboard" data-url="../../network/habox-over-greatwall/index.html">
+  <body class="mobile-support print disableInlineCopyToClipboard" data-url="../../installation/habox-over-greatwall/index.html">
     <div id="R-body" class="default-animation">
       <div id="R-body-overlay"></div>
       <nav id="R-topbar">
@@ -80,13 +80,13 @@
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../network/index.html"><span itemprop="name">3 网络技术</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../installation/index.html"><span itemprop="name">1 安装维护</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Ha盒子配置科学上网</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/cloudflare-tunnel-ssh/index.html" title="Cloudflare tunnel配置ssh连接 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/hacs/index.html" title="HACS安装激活 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/linux-partition/index.html" title="linux下无损扩容分区方法 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/free-remote-control/index.html" title="远程控制Homeassistant盒子 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -110,25 +110,25 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="../../network/free-vless-node/index.html" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-c794c6b034ca326bd0211d17b00aa14f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c794c6b034ca326bd0211d17b00aa14f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
+<p><a href="#R-image-dfc2d59fd7197a879ba67ab6b2b2b2f3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dfc2d59fd7197a879ba67ab6b2b2b2f3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-f9eb2ef8be232c7bd45980eaa4be1e9e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9eb2ef8be232c7bd45980eaa4be1e9e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
+<p><a href="#R-image-381ef783540125a5f07874a98c1105ca" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-381ef783540125a5f07874a98c1105ca"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-08653d13cac9fd9ffeea76d4ecd88b13" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-08653d13cac9fd9ffeea76d4ecd88b13"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
+<p><a href="#R-image-781c2bc435973c9c0e6a41e067776c7a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-781c2bc435973c9c0e6a41e067776c7a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-8d884f1c397cf9b13c8fd250feb4873d" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8d884f1c397cf9b13c8fd250feb4873d"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
+<p><a href="#R-image-329fa8de1026e60bcf86d5e9cccf0518" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-329fa8de1026e60bcf86d5e9cccf0518"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-4a3462068149d22ae0c25c98bffe980e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4a3462068149d22ae0c25c98bffe980e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
+<p><a href="#R-image-5f036d3ea23e2dbb69f5444e2b9b8ae9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f036d3ea23e2dbb69f5444e2b9b8ae9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想，实现上网自由。</p>
@@ -164,9 +164,9 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1734743288" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1734743288" defer></script>
-    <script src="../../js/theme.js?1734743288" defer></script>
+    <script src="../../js/clipboard.min.js?1734749095" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="../../js/theme.js?1734749095" defer></script>
 
 
   </body>
