--- a/public/installation/hacs/index.print.html
+++ b/public/installation/hacs/index.print.html
@@ -27,18 +27,18 @@
     <link href="http://localhost:1313/installation/hacs/index.html" rel="canonical" type="text/html" title="HACS安装激活 :: HaBox 技术支持站">
     <link href="../../installation/hacs/index.xml" rel="alternate" type="application/rss+xml" title="HACS安装激活 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1734743189" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1734743189" rel="stylesheet">
-    <link href="../../css/fonts.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1734743189" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1734743189" rel="stylesheet">
-    <link href="../../css/print.css?1734743189" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1734743189" rel="stylesheet">
-    <script src="../../js/variant.js?1734743189"></script>
+    <link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="../../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1734749095" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1734749095" rel="stylesheet">
+    <link href="../../css/print.css?1734749095" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1734749095" rel="stylesheet">
+    <script src="../../js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -78,7 +78,7 @@
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/wifi/index.html" title="给HA Box插上无线WIFI的翅膀 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../access/index.html" title="2 设备接入 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../installation/habox-over-greatwall/index.html" title="Ha盒子配置科学上网 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -108,35 +108,35 @@
 </blockquote>
 <p>由于Homeassistant的安装五花八门，所以网上有很多教程看上去非常复杂，但是在HA Box中安装HACS非常简单，下面我们一起来看看怎么安装。</p>
 <p>配置 - 设备与服务 ，在集成选项卡右下角点<strong>添加集成</strong>按钮</p>
-<p><a href="#R-image-bdd2b67b8e78e0701816108e1cf46dc4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-bdd2b67b8e78e0701816108e1cf46dc4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
-<p><a href="#R-image-cb484c5d5afbf160ece083cdeab821ef" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cb484c5d5afbf160ece083cdeab821ef"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
+<p><a href="#R-image-2f9bf685fe3316c96f18ba1fdfb5334f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2f9bf685fe3316c96f18ba1fdfb5334f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
+<p><a href="#R-image-bfaa54e7c7dffd756d59cc9d918530cd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-bfaa54e7c7dffd756d59cc9d918530cd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
 <p>在弹出窗口搜索HACS，你将看到HACS已经在列表里，然后点击它（整行随便点就行，右边的几个图标只是告诉你HACS的一些功能）</p>
-<p><a href="#R-image-9e0d74077cdf4d0f657d9f628dd02c1c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9e0d74077cdf4d0f657d9f628dd02c1c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
+<p><a href="#R-image-8ff2801f694481c1f7ddd3f063a39baf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8ff2801f694481c1f7ddd3f063a39baf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
 <p>全勾选上，然后提交</p>
-<p><a href="#R-image-b1102fa3415f71471eeee89d8ab4202e" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b1102fa3415f71471eeee89d8ab4202e"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
+<p><a href="#R-image-29025adfe9560cb11c1faf9f0df15da9" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-29025adfe9560cb11c1faf9f0df15da9"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
 <p>接下来是打开链接，进到github.com有个授权的动作</p>
-<p><a href="#R-image-ca8bc49dcb8c1149ccb12eb251f75a10" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ca8bc49dcb8c1149ccb12eb251f75a10"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
+<p><a href="#R-image-57f6f2f949e0a6f9acdaf186bd90105f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-57f6f2f949e0a6f9acdaf186bd90105f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
 <p>不出以外的话，你将看到这个页面，复制刚才弹窗给你的验证码，直接鼠标全选上复制过去直接粘贴，然后点 Continue 继续</p>
-<p><a href="#R-image-11aea0ba66bba5d8e0c0bbbea4532118" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-11aea0ba66bba5d8e0c0bbbea4532118"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
+<p><a href="#R-image-45a2772d974deccb351557e4bf4e34c4" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-45a2772d974deccb351557e4bf4e34c4"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
 <p>有时候会因为种种原因出现下面这个弹窗提示<strong>cloud_not_register</strong>,网络问题直接关闭从头再来多试几次</p>
 <p>如果出现下面这个页面说明你刚才的验证码没输错，可以点击Authorize hacs授权了</p>
-<p><a href="#R-image-d1c98abcfcb67120f6131f6f6d0ba860" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d1c98abcfcb67120f6131f6f6d0ba860"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
+<p><a href="#R-image-6d975c5110d3d40b51054f588eefc207" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6d975c5110d3d40b51054f588eefc207"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
 <p>OK,到这里说明已经配置成功了，可以关闭这个页面了。</p>
-<p><a href="#R-image-18a1ce726719628e8469b5e85c693016" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-18a1ce726719628e8469b5e85c693016"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
+<p><a href="#R-image-fadf68980c898acddf517d527a624468" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fadf68980c898acddf517d527a624468"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
 <p>返回到Homeassistant,HACS已经配置成功，并自动发现了家里的一些设备，可以对区域进行配置，告诉HACS这个设备是在客厅还是在卧室或者别的房间。当然你也可以直接点关闭或完成。</p>
-<p><a href="#R-image-b470b15265a6582366eaf6f16874af8c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b470b15265a6582366eaf6f16874af8c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
+<p><a href="#R-image-71770e0164f09a6e310b7256b5749189" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-71770e0164f09a6e310b7256b5749189"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
 <p>看，左侧已经出现HACS的连接，集成里面已配置列表已经有HACS了。</p>
-<p><a href="#R-image-6f7e95a3ad52ceec7162de516eb71aa8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6f7e95a3ad52ceec7162de516eb71aa8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
+<p><a href="#R-image-2b5444d051575077bfebe01caa05049c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2b5444d051575077bfebe01caa05049c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
 <p>此时你可能需要重启一下HA Box缓解一下激动的心情了</p>
 
 <script
@@ -170,9 +170,9 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1734743189" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1734743189" defer></script>
-    <script src="../../js/theme.js?1734743189" defer></script>
+    <script src="../../js/clipboard.min.js?1734749095" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="../../js/theme.js?1734749095" defer></script>
 
 
   </body>
