--- a/public/about/index.html
+++ b/public/about/index.html
@@ -50,17 +50,17 @@ HA盒子，找我就行，包您满意，诚信经营。
     <link href="../about/index.xml" rel="alternate" type="application/rss+xml" title="5 关于我们 :: HaBox 技术支持站">
     <link href="../about/index.print.html" rel="alternate" type="text/html" title="5 关于我们 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1734743189" rel="stylesheet">
-    <link href="../css/auto-complete.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1734743189" rel="stylesheet">
-    <link href="../css/fonts.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1734743189" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1734743189" rel="stylesheet">
-    <link href="../css/print.css?1734743189" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1734743189"></script>
+    <link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1734749095" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1734749095" rel="stylesheet">
+    <link href="../css/print.css?1734749095" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -113,7 +113,7 @@ HA盒子，找我就行，包您满意，诚信经营。
             </div>
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../faq/index.html" title="4 常见问题 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
-            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-right"></i></span>
+            <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../about/homeassistant-box-introduction/index.html" title="Homeassistant盒子介绍 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show"><button class="topbar-control" onclick="toggleTopbarFlyout(this)" type="button" title="更多"><i class="fa-fw fas fa-ellipsis-v"></i></button>
               <div class="topbar-content">
@@ -149,11 +149,11 @@ HA盒子，找我就行，包您满意，诚信经营。
 <h2 id="联系我们"><strong>联系我们</strong></h2>
 <p>【闲鱼】<a href="https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE" rel="external" target="_self">https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE</a> MF1643 「这是我的闲鱼号，快来看看吧～」
 点击链接直接打开</p>
-<p><a href="#R-image-2929e1c0d9a3f21353cf769926969699" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2929e1c0d9a3f21353cf769926969699"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
+<p><a href="#R-image-52221d5bda19631f83986c965935d499" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-52221d5bda19631f83986c965935d499"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
 <p>QQ群</p>
-<p><a href="#R-image-c1c600567c09eff068d5afad67a82c93" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c1c600567c09eff068d5afad67a82c93"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
+<p><a href="#R-image-c4d6a41616969ed1de5e161998e6bcc5" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c4d6a41616969ed1de5e161998e6bcc5"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -249,13 +249,13 @@ HA盒子，找我就行，包您满意，诚信经营。
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1734743189" defer></script>
-        <script src="../js/lunr/lunr.min.js?1734743189" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1734743189" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1734743189" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1734743189" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1734743189" defer></script>
-        <script src="../js/search.js?1734743189" defer></script>
+        <script src="../js/auto-complete.js?1734749095" defer></script>
+        <script src="../js/lunr/lunr.min.js?1734749095" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1734749095" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1734749095" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1734749095" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1734749095" defer></script>
+        <script src="../js/search.js?1734749095" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -266,19 +266,21 @@ HA盒子，找我就行，包您满意，诚信经营。
           <li data-nav-id="/installation/index.html" class=""><input type="checkbox" id="R-section-c7d2c74d7b93b238c2b4b636995f66f9" aria-controls="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9"><label for="R-section-c7d2c74d7b93b238c2b4b636995f66f9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单1 安装维护</span></label><a class="padding" href="../installation/index.html">1 安装维护<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9" class="morespace collapsible-menu">
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/habox-over-greatwall/index.html" class=""><a class="padding" href="../installation/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/free-remote-control/index.html" class=""><a class="padding" href="../installation/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="../network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class=""><a class="padding" href="../network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/faq/index.html" class=""><a class="padding" href="../faq/index.html">4 常见问题<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/about/index.html" class="active"><a class="padding" href="../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/index.html" class="active parent "><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a" checked><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
+          <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/brand-new-boxes-arrived/index.html" class=""><a class="padding" href="../about/brand-new-boxes-arrived/index.html">新到一批Homeassistant盒子，几乎没有瑕疵<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -349,9 +351,9 @@ HA盒子，找我就行，包您满意，诚信经营。
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1734743189" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1734743189" defer></script>
-    <script src="../js/theme.js?1734743189" defer></script>
+    <script src="../js/clipboard.min.js?1734749095" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="../js/theme.js?1734749095" defer></script>
 
 
   </body>
