--- a/public/faq/index.print.html
+++ b/public/faq/index.print.html
@@ -9,7 +9,7 @@
 Homeassistant Box忘记密码怎么办？ 如果只是忘记密码，用户名没忘记
 在浏览器访问http://homeassistant.local:7681（或者用ip访问，比如http://192.168.3.198:7681/），
 在ha提示符后面执行
-authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;">
+authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34; ">
     <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://localhost:1313/images/hero.png">
@@ -18,7 +18,7 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 Homeassistant Box忘记密码怎么办？ 如果只是忘记密码，用户名没忘记
 在浏览器访问http://homeassistant.local:7681（或者用ip访问，比如http://192.168.3.198:7681/），
 在ha提示符后面执行
-authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;">
+authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34; ">
     <meta property="og:url" content="http://localhost:1313/faq/index.html">
     <meta property="og:site_name" content="HaBox 技术支持站">
     <meta property="og:title" content="4 常见问题 :: HaBox 技术支持站">
@@ -26,7 +26,7 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 Homeassistant Box忘记密码怎么办？ 如果只是忘记密码，用户名没忘记
 在浏览器访问http://homeassistant.local:7681（或者用ip访问，比如http://192.168.3.198:7681/），
 在ha提示符后面执行
-authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;">
+authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34; ">
     <meta property="og:locale" content="zh_cn">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://localhost:1313/images/hero.png">
@@ -35,25 +35,25 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 Homeassistant Box忘记密码怎么办？ 如果只是忘记密码，用户名没忘记
 在浏览器访问http://homeassistant.local:7681（或者用ip访问，比如http://192.168.3.198:7681/），
 在ha提示符后面执行
-authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;">
+authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34; ">
     <meta itemprop="wordCount" content="82">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
     <title>4 常见问题 :: HaBox 技术支持站</title>
     <link href="http://localhost:1313/faq/index.html" rel="canonical" type="text/html" title="4 常见问题 :: HaBox 技术支持站">
     <link href="../faq/index.xml" rel="alternate" type="application/rss+xml" title="4 常见问题 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1734743189" rel="stylesheet">
-    <link href="../css/auto-complete.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1734743189" rel="stylesheet">
-    <link href="../css/fonts.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734743189" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1734743189" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1734743189" rel="stylesheet">
-    <link href="../css/print.css?1734743189" rel="stylesheet" media="print">
-    <link href="../css/format-print.css?1734743189" rel="stylesheet">
-    <script src="../js/variant.js?1734743189"></script>
+    <link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1734749095" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1734749095" rel="stylesheet">
+    <link href="../css/print.css?1734749095" rel="stylesheet" media="print">
+    <link href="../css/format-print.css?1734749095" rel="stylesheet">
+    <script src="../js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -90,7 +90,7 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">4 常见问题</span><meta itemprop="position" content="1"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../network/free-remote-control/index.html" title="远程控制Homeassistant盒子 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../network/free-vless-node/index.html" title="搭建免费科学上网节点 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../about/index.html" title="5 关于我们 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -118,9 +118,8 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 <p>在ha提示符后面执行</p>
 </li>
 </ol>
-<p><code>authentication reset --username &quot;用户名&quot; --password &quot;新密码&quot;</code></p>
-<p><a href="#R-image-58fcca50fde9c7e381b3e6096309e315" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-58fcca50fde9c7e381b3e6096309e315"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></p>
+<div class="highlight wrap-code"><pre tabindex="0"><code>authentication reset --username &#34;用户名&#34; --password &#34;新密码&#34;</code></pre></div><p><a href="#R-image-d0ea015110f9f8ed97f30065f6ab8733" class="lightbox-link"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d0ea015110f9f8ed97f30065f6ab8733"><img alt="image-20241220095851655" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095851655.png"></a></p>
 <p>再回到<a href="http://homeassistant.local:8123" rel="external" target="_self">http://homeassistant.local:8123</a>登陆即可</p>
 <h3 id="想清除homeassistant-box-账户信息怎么弄">想清除Homeassistant Box 账户信息怎么弄？</h3>
 <p>如果用户名和密码都忘记了，或者你就是想单纯的清除账户信息</p>
@@ -132,13 +131,13 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 <p>在ha提示符后输入login回车</p>
 </li>
 </ol>
-<p><a href="#R-image-ec0df9e6b6a4971ae6f3654a0cb3357c" class="lightbox-link"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ec0df9e6b6a4971ae6f3654a0cb3357c"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png"></a></p>
+<p><a href="#R-image-351574458dc554d934ee2284a7176f6b" class="lightbox-link"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-351574458dc554d934ee2284a7176f6b"><img alt="image-20241220100347715" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220100347715.png"></a></p>
 <ol start="3">
 <li>在#提示符下执行，注意是大写字母C</li>
 </ol>
-<div class="highlight wrap-code"><pre tabindex="0"><code>ha-install -C</code></pre></div><p><a href="#R-image-9589485f751e76cb0ce8143dadfd77ce" class="lightbox-link"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9589485f751e76cb0ce8143dadfd77ce"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png"></a></p>
+<div class="highlight wrap-code"><pre tabindex="0"><code>ha-install -C</code></pre></div><p><a href="#R-image-cd0b8c65dc6ab1654a9ecfd0d90fd0f7" class="lightbox-link"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cd0b8c65dc6ab1654a9ecfd0d90fd0f7"><img alt="image-20241220095932222" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220095932222.png"></a></p>
 <p>再回到<a href="http://homeassistant.local:8123" rel="external" target="_self">http://homeassistant.local:8123</a>登陆即可</p>
 <h3 id="重置homeassistant盒子恢复出厂设置">重置Homeassistant盒子，恢复出厂设置</h3>
 <ol>
@@ -153,8 +152,8 @@ authentication reset --username &#34;用户名&#34; --password &#34;新密码&#3
 </li>
 </ol>
 <div class="highlight wrap-code"><pre tabindex="0"><code>rm -rf /mnt/data/supervisor/homeassistant/.storage/
-reboot</code></pre></div><p><a href="#R-image-ce92cbd9aa5372687f8a05398524d83c" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ce92cbd9aa5372687f8a05398524d83c"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></p>
+reboot</code></pre></div><p><a href="#R-image-d7ab605c9173fd84211d6fc48ab2fe45" class="lightbox-link"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d7ab605c9173fd84211d6fc48ab2fe45"><img alt="image-20241220171716361" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20241220171716361.png"></a></p>
 <h3 id="侧边栏没有supervisor菜单项">侧边栏没有supervisor菜单项</h3>
 <ol>
 <li>
@@ -169,10 +168,10 @@ reboot</code></pre></div><p><a href="#R-image-ce92cbd9aa5372687f8a05398524d83c" 
 </ol>
 <h3 id="connect-no-route-to-host">connect: no route to host</h3>
 <p>Get “http://supervisor/network/info“: dial tcp 172.30.32.2:80: connect: no route to host</p>
-<p><a href="#R-image-fbbac9277e1acee96f1db1f50ed6e118" class="lightbox-link"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fbbac9277e1acee96f1db1f50ed6e118"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png"></a></p>
-<p><a href="#R-image-0fbc53b99b99e45990838cf5fce951f4" class="lightbox-link"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0fbc53b99b99e45990838cf5fce951f4"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png"></a></p>
+<p><a href="#R-image-5783830d4076ad9dd990501bb92c77f8" class="lightbox-link"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5783830d4076ad9dd990501bb92c77f8"><img alt="截图 2024-12-01 18-25-13" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210900816.png"></a></p>
+<p><a href="#R-image-333b76bc5efd3e056856e7d411cab20a" class="lightbox-link"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-333b76bc5efd3e056856e7d411cab20a"><img alt="截图 2024-10-21 17-37-15" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202412210859363.png"></a></p>
 <ol>
 <li>
 <p>访问<a href="http://homeassistant.local:7681/" rel="external" target="_self">http://homeassistant.local:7681</a></p>
@@ -228,9 +227,9 @@ wgturbo apply -D</code></pre></div>
         </div>
       </main>
     </div>
-    <script src="../js/clipboard.min.js?1734743189" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1734743189" defer></script>
-    <script src="../js/theme.js?1734743189" defer></script>
+    <script src="../js/clipboard.min.js?1734749095" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="../js/theme.js?1734749095" defer></script>
 
 
   </body>
