--- a/public/index.html
+++ b/public/index.html
@@ -31,17 +31,17 @@
     <link href="./index.xml" rel="alternate" type="application/rss+xml" title="Homeassistant盒子介绍 :: HaBox 技术支持站">
     <link href="./index.print.html" rel="alternate" type="text/html" title="Homeassistant盒子介绍 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1734743189" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1734743189" rel="stylesheet">
-    <link href="./css/auto-complete.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1734743189" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1734743189" rel="stylesheet">
-    <link href="./css/fonts.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1734743189" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1734743189" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1734743189" rel="stylesheet">
-    <link href="./css/print.css?1734743189" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1734743189"></script>
+    <link href="./css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="./css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="./css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1734749095" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1734749095" rel="stylesheet">
+    <link href="./css/print.css?1734749095" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -130,13 +130,13 @@
 <li>晶晨S905l3A芯片，2+16G的配置可以说刚刚好，能够满足大部分的需求，接入200+设备不是问题</li>
 </ol>
 <p>安装方式为官方推荐的HAOS，通常民间称之为全功能版本，采用冬瓜制作的镜像，对中国网络环境做了优化，并增加了一些比较适用的Add-ons。</p>
-<p><a href="#R-image-203133ee167474a17e331e046c2e9c0e" class="lightbox-link"><img alt="image-20240911155228150" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240911155228150.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-203133ee167474a17e331e046c2e9c0e"><img alt="image-20240911155228150" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240911155228150.png"></a></p>
+<p><a href="#R-image-b2bf3d680f4498bed37b5153877eab37" class="lightbox-link"><img alt="image-20240911155228150" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240911155228150.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b2bf3d680f4498bed37b5153877eab37"><img alt="image-20240911155228150" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240911155228150.png"></a></p>
 <p>当然由于后期冬瓜的HAOS镜像可以适配了更多的盒子，导致市场价格进一步下降，屯了一些M401A和UNT403A，亏大了！</p>
 <p>但是不得不说，以上这三种盒子依然是最合适的。闲鱼很多便宜的都是s905l3芯片，个人并不推荐，大家购买的时候要注意看是什么芯片。</p>
 <p>先看看大家容易混淆的s905l3和s905l3a芯片的对比</p>
-<p><a href="#R-image-116ca73754522a82d29b164b5da887d4" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-116ca73754522a82d29b164b5da887d4"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
+<p><a href="#R-image-cf23241f10d77deb211cbab5a1a28ded" class="lightbox-link"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf23241f10d77deb211cbab5a1a28ded"><img alt="image-20240908214739930" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240908214739930.png"></a></p>
 <h2 id="specification-comparison">Specification comparison:</h2>
 <table>
   <thead>
@@ -351,16 +351,16 @@
 </table>
 <p>详细的对比数据，请访问 <a href="https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/" rel="external" target="_self">https://gadgetversus.com/processor/amlogic-s905l3-vs-amlogic-s905l3a/</a></p>
 <p>下面是M401A的几张图片</p>
-<p><a href="#R-image-e47717be466b732a07e9673322a6d178" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e47717be466b732a07e9673322a6d178"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
-<p><a href="#R-image-baa637897badc2c5239d8bac952c1664" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-baa637897badc2c5239d8bac952c1664"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
-<p><a href="#R-image-20074761d08cd4be9661b2ac3c9aefd9" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-20074761d08cd4be9661b2ac3c9aefd9"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
-<p><a href="#R-image-df90253dc42cc7577b85f8691c35e319" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-df90253dc42cc7577b85f8691c35e319"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
-<p><a href="#R-image-e6582260dbc23c2538ed10ec881d8be7" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6582260dbc23c2538ed10ec881d8be7"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
+<p><a href="#R-image-9e6188553d5375bdb61a861a8cb2c37f" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9e6188553d5375bdb61a861a8cb2c37f"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117187.png"></a></p>
+<p><a href="#R-image-639bbc2441f35fb2f3345d3c7620cc81" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-639bbc2441f35fb2f3345d3c7620cc81"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072117451.png"></a></p>
+<p><a href="#R-image-309c6190be8154732cf382739b4a8651" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-309c6190be8154732cf382739b4a8651"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072118487.png"></a></p>
+<p><a href="#R-image-3dfdbcc3b7088dfe20c9e5d325918245" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3dfdbcc3b7088dfe20c9e5d325918245"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119320.png"></a></p>
+<p><a href="#R-image-00d126261f0986c2207c81e55d793d6d" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-00d126261f0986c2207c81e55d793d6d"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409072119549.png"></a></p>
 <p>偶尔也出黑豹X2（panther x2）和x96max+，但是量很少，就不作介绍了，有兴趣的同学自行bing（嗯，不用百度很多年了，世界变得清净了不少）</p>
 <ul>
 <li>安装维护
@@ -368,6 +368,8 @@
 <li><a href="./installation/instructions/index.html"> HA盒子使用说明书（开箱即用）</a></li>
 <li><a href="./installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀</a></li>
 <li><a href="./installation/hacs/index.html">HACS安装激活</a></li>
+<li><a href="./installation/free-remote-control/index.html">远程控制Homeassistant盒子</a></li>
+<li><a href="./installation/habox-over-greatwall/index.html">Ha盒子配置科学上网</a></li>
 </ul>
 </li>
 <li>设备接入
@@ -378,11 +380,9 @@
 </li>
 <li>网络技术
 <ul>
-<li><a href="./network/habox-over-greatwall/index.html">Ha盒子配置科学上网</a></li>
 <li><a href="./network/linux-partition/index.html">linux下无损扩容分区方法</a></li>
 <li><a href="./network/docker-pull/index.html">从 Docker Hub 快速拉取镜像</a></li>
 <li><a href="./network/free-vless-node/index.html">搭建免费科学上网节点</a></li>
-<li><a href="./network/free-remote-control/index.html">远程控制Homeassistant盒子</a></li>
 </ul>
 </li>
 </ul>
@@ -481,13 +481,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1734743189" defer></script>
-        <script src="./js/lunr/lunr.min.js?1734743189" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1734743189" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1734743189" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1734743189" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1734743189" defer></script>
-        <script src="./js/search.js?1734743189" defer></script>
+        <script src="./js/auto-complete.js?1734749095" defer></script>
+        <script src="./js/lunr/lunr.min.js?1734749095" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1734749095" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1734749095" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1734749095" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1734749095" defer></script>
+        <script src="./js/search.js?1734749095" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -498,19 +498,21 @@
           <li data-nav-id="/installation/index.html" class=""><input type="checkbox" id="R-section-c7d2c74d7b93b238c2b4b636995f66f9" aria-controls="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9"><label for="R-section-c7d2c74d7b93b238c2b4b636995f66f9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单1 安装维护</span></label><a class="padding" href="./installation/index.html">1 安装维护<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9" class="morespace collapsible-menu">
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="./installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="./installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="./installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="./installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/habox-over-greatwall/index.html" class=""><a class="padding" href="./installation/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/free-remote-control/index.html" class=""><a class="padding" href="./installation/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="./access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="./access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="./access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="./network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class=""><a class="padding" href="./network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="./network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="./network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="./network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="./network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="./network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="./network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/faq/index.html" class=""><a class="padding" href="./faq/index.html">4 常见问题<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/about/index.html" class=""><a class="padding" href="./about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="./about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
+          <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="./about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/brand-new-boxes-arrived/index.html" class=""><a class="padding" href="./about/brand-new-boxes-arrived/index.html">新到一批Homeassistant盒子，几乎没有瑕疵<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -581,9 +583,9 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1734743189" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1734743189" defer></script>
-    <script src="./js/theme.js?1734743189" defer></script>
+    <script src="./js/clipboard.min.js?1734749095" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="./js/theme.js?1734749095" defer></script>
 
 
   </body>
