--- a/public/installation/wifi/index.html
+++ b/public/installation/wifi/index.html
@@ -27,17 +27,17 @@
     <link href="../../installation/wifi/index.xml" rel="alternate" type="application/rss+xml" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站">
     <link href="../../installation/wifi/index.print.html" rel="alternate" type="text/html" title=" 给HA Box插上无线WIFI的翅膀 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1734576343" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1734576343" rel="stylesheet">
-    <link href="../../css/fonts.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1734576343" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1734576343" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1734576343" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1734576343" rel="stylesheet">
-    <link href="../../css/print.css?1734576343" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1734576343"></script>
+    <link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1734749095" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1734749095" rel="stylesheet">
+    <link href="../../css/fonts.css?1734749095" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734749095" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1734749095" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1734749095" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1734749095" rel="stylesheet">
+    <link href="../../css/print.css?1734749095" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1734749095"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -117,12 +117,12 @@
 <h1 id="给ha-box插上无线wifi的翅膀"> 给HA Box插上无线WIFI的翅膀</h1>
 
 <p>由于我们选用的HA Box盒子是基于M401A,UNT403A,CM311-1A，都没有带无线模块（带无线模块的盒子又不适合做Haomeassistant Box），因此我们采购了一些USB无线网卡802.11n，该网卡可以在HA Box下使用，但是之智能连2.4G网络，如果你2.4G网络没打开，请先在路由器上打开它。</p>
-<p><a href="#R-image-3807002696e24b9217c14765c8ce88ca" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3807002696e24b9217c14765c8ce88ca"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg"></a></p>
+<p><a href="#R-image-75b391b9d60d7a87582396735b264cd8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-75b391b9d60d7a87582396735b264cd8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409051036273.jpeg"></a></p>
 <p>要配置无线网卡，你需要先连上网线，或者接上显示器和键盘。
 如果是已连上有线网络，那么在浏览器打开http://homeassistant.local:7681/ （或者用ip访问，比如http://192.168.3.209:7681/ ，请使用你HA Box实际的ip地址替换192.168.3.209），打开后你将看到如下界面</p>
-<p><a href="#R-image-5f4366399d912a42989bb79cc046bf96" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f4366399d912a42989bb79cc046bf96"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
+<p><a href="#R-image-5bb7d1f867bd0a35df5728a9b90ff6b6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5bb7d1f867bd0a35df5728a9b90ff6b6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/80151f8634398af9174d5c9dee81e241ef822a68.jpeg"></a></p>
 <p>当然，如果你没有连有线网络，但是接连显示器和键盘，同样在显示器上你也将看到类似的界面。</p>
 <p>在ha&gt;提示符下输入“<strong>login</strong>”然后回车，进入root模式下。</p>
 <p>输入 “<strong>ip a</strong>”回车，你将会发现有如下的网卡信息，这就是刚插上的无线网卡了</p>
@@ -133,8 +133,8 @@
 在#提示符下（root模式）输入：
 <strong><code>nmcli device wifi</code></strong>
 然后回车，将看到能扫描到的wifi信号
-<a href="#R-image-56de20784dd05d28ea035d6766453eb9" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-56de20784dd05d28ea035d6766453eb9"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
+<a href="#R-image-028a488d62a744983d773ab7d65f9d93" class="lightbox-link"><img class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-028a488d62a744983d773ab7d65f9d93"><img class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/202409040903689.jpeg"></a></p>
 <p>连接wifi的命令如下：</p>
 <div class="highlight wrap-code"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-perl" data-lang="perl"><span style="display:flex;"><span>nmcli device wifi connect <span style="color:#e6db74">&#34;YOUR_SSID&#34;</span> password <span style="color:#e6db74">&#34;YOUR_WIFI_PASSWORD&#34;</span></span></span></code></pre></div><p>当你看到返回下面的信息时，说明连接成功连。需要注意的是该网卡只支持2.4G频段的wifi信号，如果你家wifi没有支持2.4G频段的信号，将连接失败。</p>
 <blockquote>
@@ -159,8 +159,8 @@ valid_lft forever preferred_lft forever</p>
 <blockquote>
 <p>http://192.168.3.210:8123/onboarding.html</p>
 </blockquote>
-<p><a href="#R-image-e15efa47a89eb4acfe928ab16bba1f0a" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e15efa47a89eb4acfe928ab16bba1f0a"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
+<p><a href="#R-image-792efaf8c6ea1c820fd171e83ba9e7e8" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-792efaf8c6ea1c820fd171e83ba9e7e8"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e12f5e8e1ebb3fc6d7e9f66a9630f115c7226134.jpeg"></a></p>
 
 <script
   id="utteranc"
@@ -256,13 +256,13 @@ valid_lft forever preferred_lft forever</p>
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1734576343" defer></script>
-        <script src="../../js/search.js?1734576343" defer></script>
+        <script src="../../js/auto-complete.js?1734749095" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1734749095" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1734749095" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1734749095" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1734749095" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1734749095" defer></script>
+        <script src="../../js/search.js?1734749095" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -273,19 +273,21 @@ valid_lft forever preferred_lft forever</p>
           <li data-nav-id="/installation/index.html" class="parent "><input type="checkbox" id="R-section-c7d2c74d7b93b238c2b4b636995f66f9" aria-controls="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9" checked><label for="R-section-c7d2c74d7b93b238c2b4b636995f66f9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单1 安装维护</span></label><a class="padding" href="../../installation/index.html">1 安装维护<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-c7d2c74d7b93b238c2b4b636995f66f9" class="morespace collapsible-menu">
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class="active"><a class="padding" href="../../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/habox-over-greatwall/index.html" class=""><a class="padding" href="../../installation/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/installation/free-remote-control/index.html" class=""><a class="padding" href="../../installation/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/automatic-control/index.html" class=""><a class="padding" href="../../automatic-control/index.html">3 智能控制<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单4 网络技术</span></label><a class="padding" href="../../network/index.html">4 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
+          <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad"><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="../../network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class=""><a class="padding" href="../../network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/video/index.html" class=""><a class="padding" href="../../video/index.html">5 视频教程<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/faq/index.html" class=""><a class="padding" href="../../faq/index.html">4 常见问题<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/index.html" class=""><input type="checkbox" id="R-section-8e860947a5464776bf9bb1c24171f57a" aria-controls="R-subsections-8e860947a5464776bf9bb1c24171f57a"><label for="R-section-8e860947a5464776bf9bb1c24171f57a"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单5 关于我们</span></label><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8e860947a5464776bf9bb1c24171f57a" class="morespace collapsible-menu">
+          <li data-nav-id="/about/homeassistant-box-introduction/index.html" class=""><a class="padding" href="../../about/homeassistant-box-introduction/index.html">Homeassistant盒子介绍<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/brand-new-boxes-arrived/index.html" class=""><a class="padding" href="../../about/brand-new-boxes-arrived/index.html">新到一批Homeassistant盒子，几乎没有瑕疵<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -356,13 +358,12 @@ valid_lft forever preferred_lft forever</p>
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1734576343" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1734576343" defer></script>
-    <script src="../../js/theme.js?1734576343" defer></script>
+    <script src="../../js/clipboard.min.js?1734749095" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1734749095" defer></script>
+    <script src="../../js/theme.js?1734749095" defer></script>
 
 
   </body>
 </html>
-
 
 
